--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css",
-    "nodemon": "nodemon index.js",
-    "start-forever": "forever start index.js",
-    "stop-forever": "forever stop index.js"
+    "nodemon": "nodemon index.js"
   },
   "author": "Ilmo Ott",
   "license": "ISC",
