--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "express": "^4.16.3",
     "forever-monitor": "^1.7.1",
     "live-server": "^1.2.0",
-    "mongoose": "^5.2.17"
+    "mongoose": "^5.2.17",
+    "nodemailer": "^4.7.0"
   }
 }
