--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "forever-monitor": "^1.7.1",
     "live-server": "^1.2.0",
